welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Boolean
    for (k<-0 to 3){
          ^arrayFront9:11: error: type mismatch;
 found   : Unit
 required: Boolean
    for (k<-0 to n-1){
          ^